<!--
  ~ Copyright (C) 2021 Eugen Rădulescu <synapticwebb@gmail.com>
  ~ This file is part of the CipherPass project ( https://github.com/synapticweb/CipherPass ).
  ~ See the LICENSE file in the project root for license terms.
  -->

<resources>
    <string name="app_name">CipherPass</string>
    <string name="service_label">CipherPass</string>
    <string name="pass_notset_caption">Please set a password to encrypt the database. The password should be at least 6 characters long. Choose a random sequence of characters, not a dictionary word and do not write it down. If you lose it, you won\'t be able to recover your data. </string>
    <string name="pass_not_set_send_pass">Set password</string>
    <string name="pass_set_send_pass">UNLOCK DATABASE</string>
    <string name="passphrase_hint">Password</string>
    <string name="pass_incorect">The password you entered is not valid.</string>
    <string name="error_setting_pass">An error occurred while setting the password.</string>
    <string name="passphrase_retype_hint">Retype password</string>
    <string name="pass_no_match">The passwords entered do not match.</string>
    <string name="pass_empty">Password cannot be empty</string>
    <string name="one_more_backpress">Press the back button one more time to exit.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_insert_pass_title">Password required</string>
    <string name="settings_insert_pass_message">Please insert your password:</string>
    <string name="system_lock_next">Next</string>
    <string name="system_lock_finish">Finish</string>
    <string name="system_lock_soft_warning">Using the system provided authentication requires that encryption keys are stored on the device. This device is only able to provide software backed storage for encryption keys, which is less secure than hardware backed storage. Continue?</string>
    <string name="no_lock_soft_warning">Having no authentication requires that encryption keys are stored on the device. This device is only able to provide software backed storage for encryption keys, which is less secure than hardware backed storage. Continue?</string>
    <string name="system_lock_file_write_fail">There was an error processing your request.</string>
    <string name="system_lock_not_available">Only available on Android 6 and newer.</string>
    <string name="system_lock_device_not_secure">To use this feature, you have to secure your device with a password, pin or pattern.</string>
    <string name="system_lock_unavailable">The system provided authentification is unavailable.</string>
    <string name="auth_subtitle">Authentication required</string>
    <string name="change_pass_dialog_title">Change password</string>
    <string name="act_pass_hint">Actual password</string>
    <string name="new_pass_hint">New password</string>
    <string name="new_pass_retype_hint">Retype new password</string>
    <string name="change_pass_ok">Successfully changed the password.</string>
    <string name="change_pass_error">Error while changing password.</string>
    <string name="act_pass_empty">Actual password cannot be empty.</string>
    <string name="hash_change_success">The hash function was successfully changed</string>
    <string name="hash_change_error">Error changing the hash function.</string>
    <string name="enter_pass">Enter password:</string>
    <string name="new_entry">New entry</string>
    <string name="addedit_name">Entry name</string>
    <string name="addedit_id">Username</string>
    <string name="addedit_pass">Password</string>
    <string name="addedit_repass">Retype password</string>
    <string name="addedit_url">Url</string>
    <string name="addedit_comment">Comment</string>
    <string name="addedit_close">Close</string>
    <string name="addedit_name_empty">The entry name cannot be empty.</string>
    <string name="addedit_id_empty">The username cannot be empty.</string>
    <string name="addedit_pass_empty">The password cannot be empty.</string>
    <string name="addedit_pass_nomatch">The passwords entered do not match.</string>
    <string name="detail_username">Username</string>
    <string name="detail_passwd">Password</string>
    <string name="detail_url">Url</string>
    <string name="detail_comment">Comment</string>
    <string name="detail_date_created">Date created</string>
    <string name="detail_date_modif">Date modified</string>
    <string name="addedit_nochange">No change detected.</string>
    <string name="addedit_save_ok">Save successful.</string>
    <string name="addedit_save_error">An error occurred while saving the entry.</string>
    <string name="confirm_deletion_title">Confirm deletion</string>
    <string name="confirm_deletion_message">Are you sure you want to delete this entry? (Recovery is not possible)</string>
    <string name="deletion_ok">Entry successfully deleted.</string>
    <string name="confirm_discard_title">Discard changes?</string>
    <string name="confirm_discard_message">Do you really want to discard the changes made?</string>
    <string name="copied_to_clipboard">copied to clipboard.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="url">Url</string>
    <string name="search_hint">Search entries</string>
    <string name="search_title">Search</string>
    <string name="entries_list_sort">Sort order</string>
    <string name="lock_title">Lock database</string>
    <string name="new_field_button">New field</string>
    <string name="new_field_input_title">Add new field</string>
    <string name="new_field_input_hint">Field name</string>
    <string name="insert_cf_error">Error inserting the custom field.</string>
    <string name="value_not_set">Value not set</string>
    <string name="protected_field">Protected</string>
    <string name="delete_custom_field_title">Delete field</string>
    <string name="delete_custom_field_message">Delete this custom field?</string>
    <string name="edit_custom_field">Edit custom field</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="enter_password_title">Provide your password</string>
    <string name="set_icon_fragment_title">Set entry icon</string>
    <string name="warning_title">Warning</string>
    <string name="stop_showing">Do not show again</string>
    <string name="warning_serialize">The entries will be exported in unencrypted format on a public accesible location on the device storage. It is your responsibility to protect the entries data. Proceed to export?</string>
    <string name="export_error">An error occurred while exporting the entries.</string>
    <string name="export_success">Entries were successfully exported.</string>
    <string name="export_menu_title">Export entries</string>
    <string name="import_menu_title">Import entries</string>
    <string name="import_error">An error occurred while importing entries.</string>
    <string name="replace_entries_title">Replace existing entries? (they cannot be recovered)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="import_success">Entries were successfully imported.</string>
    <string name="no_entries">There are currently no entries.</string>
    <string name="about_fragment_name">About</string>
    <string name="version">version</string>
    <string name="app_description">is a basic password manager for Android that stores password data in an encrypted database. This ensures secure storage of password data even on rooted devices.</string>
    <string name="website_label">Website:</string>
    <string name="website">https://github.com/synapticweb/CipherPass</string>
    <string name="contact_label">Developer contact:</string>
    <string name="email">synapticwebb@gmail.com</string>
    <string name="no_waranty">is free and open source software. It comes with ABSOLUTELY NO WARRANTY.</string>
    <string name="attributions">uses database encryption provided by SqlCipher library (https://github.com/sqlcipher/android-database-sqlcipher). The launcher icon is based on artwork from https://www.vecteezy.com. The background of the actionbar banner is based on artwork created by Harryarts (https://www.freepik.com). The social media icons are based on artwork from https://www.flaticon.com and https://www.svgrepo.com/.</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="priv_pol_intro">There are two situations when %s collects and sends data over the internet:</string>
    <string name="priv_pol_1">1. When the switch preference \"Crash reports\" is ON and an app crash happens, some data useful for debugging is compiled in a crash report which is anonymously sent to developer. This data include the app version, the device model, the device brand, the Android version, the stack trace, the device capabilities, the logcat extras if available, the settings of the app, and the date and hour of the crash. Except the developer, there is no third party that has access to this data. There is no way for the developer to actually identify the users using this data. The crash report never includes PASSWORD DATA that the user has stored in the app database. The crash reports are compiled and sent using the ACRA library ( https://github.com/ACRA/acra ).</string>
    <string name="priv_pol2">2. When the switch preference "\Usage data\" is ON, the developer is notified when the user installs or updates the app and also when the user opens the app. This data is anonymous and is used only for statistics (i.e, how hany people installed the app, how many people currently use the app, what Android versions they use, in what countries is the app installed more frequently). Except the developer, there is no third party that has access to this data. There is no way for the developer to actually identify the users using this data. The usage data never includes PASSWORD DATA that the user has stored in the app database. The usage data is collected using the Matomo analytics software ( https://matomo.org/ ). </string>

    <!-- Preference keys, entry names, entry values, titles, summaries-->
    <string name="applock_key">applock</string>
    <string name="applock_title">Authentication type</string>
    <string name="applock_passwd_value">passwd</string>
    <string name="applock_system_value">system</string>
    <string name="applock_nolock_value">none</string>
    <string name="applock_passwd_name">Ask for password</string>
    <string name="applock_system_name">Use system authentication</string>
    <string name="applock_none_name">No authentication</string>

    <string name="change_pass_title">Change master password</string>
    <string name="changepass_key">changepass</string>

    <string name="hash_type_key">hash</string>
    <string name="hash_type_title">Hash function</string>
    <string name="hash_type_summary">The cryptographic function used for storing the app password.</string>
    <string name="hash_type_md5_name">MD5 (fast - low security)</string>
    <string name="hash_type_sha_name">SHA512 (fast - medium security)</string>
    <string name="hash_type_PBKDF2_name">PBKDF2 (slow - good security)</string>
    <string name="hash_md5_value">md5</string>
    <string name="hash_sha_value">sha</string>
    <string name="hash_pbkdf2_value">pbkdf2</string>

    <string name="clipboard_timeout_title">Clipboard timeout</string>
    <string name="clipboard_timeout_summary">Time before clearing clipboard after copying an item.</string>
    <string name="clipboard_timeout_key">clipboard_timeout</string>
    <string name="clipboard_timeout_disabled_value">disabled</string>
    <string name="clipboard_timeout_15_name">15 seconds</string>
    <string name="clipboard_timeout_30_name">30 seconds</string>
    <string name="clipboard_timeout_60_name">1 minute</string>
    <string name="clipboard_timeout_180_name">3 minutes</string>
    <string name="clipboard_timeout_300_name">5 minutes</string>
    <string name="clipboard_timeout_disabled_name">Disabled</string>

    <string name="background_timeout_key">background_timeout</string>
    <string name="background_timeout_title">Background timeout</string>
    <string name="background_timeout_summary">Time before requring authentication when the app is in background.</string>
    <string name="background_timeout_30_name">30 seconds</string>
    <string name="background_timeout_60_name">1 minute</string>
    <string name="background_timeout_300_name">5 minutes</string>
    <string name="background_timeout_600_name">10 minutes</string>
    <string name="background_timeout_900_name">15 minutes</string>
    <string name="background_timeout_1800_name">30 minutes</string>
    <string name="background_timeout_disabled_name">Disabled</string>
    <string name="background_timeout_disabled_value">disabled</string>

    <string name="sort_name_asc_name">Sort by name ascending</string>
    <string name="sort_name_desc_name">Sort by name descending</string>
    <string name="sort_creation_asc_name">Sort by creation date ascending</string>
    <string name="sort_creation_desc_name">Sort by creation date descending</string>
    <string name="sort_modif_asc_name">Sort by modification date ascending</string>
    <string name="sort_modif_desc_name">Sort by modification date descending</string>
    <string name="sort_creation_asc_value">SORT_CREATION_ASC</string>
    <string name="sort_creation_desc_value">SORT_CREATION_DESC</string>
    <string name="sort_name_asc_value">SORT_NAME_ASC</string>
    <string name="sort_name_desc_value">SORT_NAME_DESC</string>
    <string name="sort_modif_asc_value">SORT_MODIF_ASC</string>
    <string name="sort_modif_desc_value">SORT_MODIF_DESC</string>

    <string name="allow_reports_key">acra.enable</string>
    <string name="allow_reports_title">Crash reports</string>
    <string name="allow_reports_summary">When this setting is on a report will be anonymously sent to developer if the app crashes.</string>

    <string name="allow_usage_data_key">usage_data</string>
    <string name="allow_usage_data_title">Usage data</string>
    <string name="allow_usage_data_summary">When this setting is on some usage data will be anonymously sent to developer.</string>

    <!-- Autofill -->
    <string name="autofill_auth_title">Autofill with CipherPass</string>
</resources>